# Vibe-Project

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/auth/: .air.toml  Dockerfile  go.mod  go.sum
backend/auth/cmd/: main.go
backend/auth/docs/: AUTH.md
backend/auth/internal/config/: config.go
backend/auth/internal/database/: connection.go
backend/captcha/: Cargo.toml  Dockerfile
backend/captcha/docs/: CAPTCHA.md
backend/captcha/src/: config.rs  db.rs  error.rs  main.rs  models.rs
backend/captcha/src/api/: captcha.rs  health.rs  logs.rs  mod.rs  models.rs  stats.rs  training.rs
backend/captcha/src/solvers/: cnn.rs  mod.rs  ocr.rs  preprocessor.rs
backend/gateway/: Dockerfile  go.mod  go.sum
backend/gateway/cmd/: main.go
backend/gateway/docs/: GATEWAY.md
database/: schema.sql
database/migrations/: 001_create_users.sql  002_create_captcha_models.sql  003_create_captcha_logs.sql  004_create_api_keys.sql  005_create_training_jobs.sql
database/seeds/: 001_seed_admin.sql
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  SECURITY.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/docs/: FRONTEND.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/i18n/: request.ts
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth-store.ts
plans/: project-plan.md
scripts/: deploy.ps1  deploy.sh  setup.bat  setup.ps1  setup.sh
(+26 files in other folders)
