[package]
name = "captcha-service"
version = "0.1.0"
edition = "2021"
authors = ["Captcha Platform Team"]
description = "Captcha solving service with OCR and CNN models"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Image processing
image = "0.24"
imageproc = "0.23"

# OCR - Tesseract bindings
tesseract = "0.14"
leptonica-sys = "0.4"

# Machine Learning
tract-onnx = "0.20"
ndarray = "0.15"

# Utilities
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.13"
dotenv = "0.15"

# HTTP client for internal communication
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
actix-rt = "2"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true